--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,13 @@ repositories {
     jcenter()
 }
 
+task getBookings(type: JavaExec) {
+  group 'build'
+  description 'Get and print all bookings via REST'
+  classpath sourceSets.main.runtimeClasspath
+  main = "UnirestAuthorization"
+}
+
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
