--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     
     compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.3.1'
+    compile "com.sparkjava:spark-core:2.7.2"
     compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.26'
     compile group: 'org.glassfish.jersey.inject', name:'jersey-hk2', version: '2.26'
     compile 'org.apache.httpcomponents:httpclient:4.5.6'
